# Ngpcraft_emulator

./: .gitignore  DOC_SOURCES_INDEX.md  HARDWARE_COMPAT_POLICY.md  LICENSE  NgpCraftEmulator.spec  PERF_TIMING_POLICY.md  README.md  SAVE_POLICY.md  TRANSLATING.md  build_exe.bat  conftest.py  ngpc_bindmap.py  ngpc_debug.py  ngpc_emu.py  ngpc_emu_ui_qt.py  ngpc_input.py  ngpc_library.py  ngpc_native.py  ngpc_settings.py  ngpc_shell.py  ngpc_theme.py  ngpc_video.py  run.bat  run.sh
.github/workflows/: build.yml
core/: __init__.py  adc.py  apu.py  atlas.py  breakpoints.py  bus.py  checkpoints.py  cpu.py  decode.py  emulator_session.py  engine_bridge.py  event_log.py  event_log_profile.py  exec_breaks.py  execute.py  expr.py  fetch.py  flash.py  flash_file.py  frame_diff.py  frame_goldens.py  frame_pacer.py  frame_timing.py  goldens.py  k2ge.py  machine.py  memory.py  native.py  native_session.py  ngps_export.py  pointers.py  quirks.py  quirks_db.json  ramsearch.py  renderer.py  rom.py  romcheck.py  romdiff.py  run_steps.py  run_until.py  (+12 more)
cpp/: CMakeLists.txt
cpp/include/: ngpc_core.h
cpp/src/: apu.cpp  apu.hpp  core.cpp  execute.cpp  machine.hpp  mem_family.cpp  memory.cpp  reg_family.cpp  render.cpp  z80.cpp  z80.hpp
hw_calibration/: README.md  a_cpu_calib_v1.ngc  a_cpu_calib_v2.ngc  a_cpu_calib_v3.ngc  a_cpu_calib_v4.ngc  a_cpu_calib_v5.ngc  a_cpu_calib_v6.ngc  cpu_calib_v1.c  cpu_calib_v2.c  cpu_calib_v3.c  cpu_calib_v4.c  cpu_calib_v5.c  cpu_calib_v6.c
lang/: en.json  fr.json  pt_PT.json
oracle_tools/: README.md  asm900_oracle.py  dump_our_trace.py  native_diff.py  trace_diff.py  trace_equiv.py
roms/: README.txt
specs/: ADC.md  ADDRESS_SPACE.md  APU_T6W28.md  BIOS_HLE.md  BREAKPOINTS.md  CPP_CORE_PORT.md  CPU_STATE.md  DECODE.md  ENGINE_INTEGRATION_CONTRACT.md  EVENT_LOG.md  EXECUTE.md  FETCH.md  FLASH.md  FRAME_GOLDENS.md  FRAME_TIMING.md  HW_CALIBRATION_ROM.md  K1GE_COMPAT_MODE.md  K2GE_OAM.md  K2GE_PALETTE.md  K2GE_TILEMAP.md  K2GE_TILES.md  MEMORY_READ.md  MICRO_DMA.md  OPCODE_COVERAGE_PRIORITIES.md  QUIRKS.md  RENDERER.md  RESET_STATE.md  ROM_HEADER.md  RUN_STEPS.md  RUN_UNTIL.md  SAVESTATE.md  STEP.md  SYMBOLS.md  TILE_ATLAS.md  TIMERS.md  TLCS900_MEMORY_FAMILY.md  TOOLCHAIN_DOCS_CROSSWALK_2026-05-22.md  TRACE.md  TRACE_EXEC.md  WATCHPOINTS.md  (+1 more)
tests/: test_adc.py  test_apu_native.py  test_apu_t6w28.py  test_atlas.py  test_bios_boot.py  test_bios_flash_syscall.py  test_bios_handoff_registers.py  test_bios_hle.py  test_bit_search.py  test_block_pointer_top_byte.py  test_breakpoints.py  test_bus.py  test_checkpoints.py  test_cli_payloads.py  test_cpu.py  test_cycle_accounting.py  test_dac_voice.py  test_decode.py  test_emulator_session.py  test_engine_bridge.py  test_escaped_reg_opcodes.py  test_event_log.py  test_event_log_profile.py  test_eventlog_goldens.py  test_execute.py  test_fantrad_tools.py  test_fetch.py  test_flash.py  test_flash_file.py  test_flash_saves.py  test_frame_diff_goldens.py  test_frame_pacer.py  test_frame_timing.py  test_frame_timing_bus.py  test_frame_timing_cycles.py  test_frame_timing_executor.py  test_frame_timing_irq.py  test_hint_raster_anchor.py  test_i18n.py  test_inc_dec_flags_by_size.py  (+40 more)
tools/: i18n_check.py  wdbg.py
